--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,122 +2,131 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
-    android:fitsSystemWindows="true"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/space_30"
-    android:paddingRight="@dimen/space_30">
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dip"
-        android:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/register"
-        android:textColor="@color/login_text_color"
-        android:textSize="@dimen/text_size_22" />
-
-    <EditText
-        style="@style/edit_blue"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="@dimen/space_26"
-        android:hint="@string/phone"
-        android:inputType="number"
-        android:maxLength="11"
-        android:paddingLeft="@dimen/space_15" />
+    <include layout="@layout/top_title"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="@dimen/space_20"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@color/background_color"
+        android:fitsSystemWindows="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/space_30"
+        android:paddingRight="@dimen/space_30">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dip"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="@string/register"
+            android:textColor="@color/login_text_color"
+            android:textSize="@dimen/text_size_22" />
 
         <EditText
             style="@style/edit_blue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:hint="@string/code"
-            android:paddingLeft="@dimen/space_15"
-            android:inputType="number" />
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="@dimen/space_26"
+            android:hint="@string/phone"
+            android:inputType="number"
+            android:maxLength="11"
+            android:paddingLeft="@dimen/space_15" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="@dimen/space_20"
+            android:orientation="horizontal">
+
+            <EditText
+                style="@style/edit_blue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                android:hint="@string/code"
+                android:inputType="number"
+                android:paddingLeft="@dimen/space_15" />
+
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="7dp"
+                android:layout_weight="4"
+                android:background="@drawable/btn_bg_selecter"
+                android:text="@string/phone_code"
+                android:textColor="@color/text_color_white"
+                android:textSize="@dimen/text_size_18" />
+        </LinearLayout>
+
+        <EditText
+            style="@style/edit_blue"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="@dimen/space_20"
+            android:hint="@string/register_password"
+            android:inputType="number"
+            android:paddingLeft="@dimen/space_15" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8">
+
+            <TextView
+                android:id="@+id/forget_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:padding="@dimen/space_8"
+                android:text="@string/register_login"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/text_size_15" />
+        </RelativeLayout>
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:layout_marginLeft="7dp"
+            android:id="@+id/next_btn"
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:layout_marginTop="@dimen/space_25"
             android:background="@drawable/btn_bg_selecter"
-            android:text="@string/phone_code"
+            android:text="@string/next"
             android:textColor="@color/text_color_white"
             android:textSize="@dimen/text_size_18" />
-    </LinearLayout>
 
-    <EditText
-        style="@style/edit_blue"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="@dimen/space_20"
-        android:hint="@string/register_password"
-        android:inputType="number"
-        android:paddingLeft="@dimen/space_15" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_8">
-
-        <TextView
-            android:id="@+id/forget_btn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/space_8"
-            android:text="@string/register_login"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/text_size_15" />
-    </RelativeLayout>
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/next_btn"
-        android:layout_width="match_parent"
-        android:layout_height="40dip"
-        android:layout_marginTop="@dimen/space_25"
-        android:background="@drawable/btn_bg_selecter"
-        android:text="@string/next"
-        android:textColor="@color/text_color_white"
-        android:textSize="@dimen/text_size_18" />
+            <CheckBox
+                android:id="@+id/checkbox_agree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/check_box_bg"
+                android:checked="true"
+                android:paddingLeft="5dp"
+                android:text="@string/register_agree"
+                android:textSize="16sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textview_register_order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/register_order"
+                android:textColor="#ff788c"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/checkbox_agree"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/check_box_bg"
-            android:checked="true"
-            android:paddingLeft="5dp"
-            android:text="@string/register_agree"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/textview_register_order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register_order"
-            android:textColor="#ff788c"
-            android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
