--- a/app/src/main/res/layout/home_info_top.xml
+++ b/app/src/main/res/layout/home_info_top.xml
@@ -1,100 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:background="@color/color_home_info_background"
     android:id="@+id/login_linear"
-    android:visibility="gone"
-    android:layout_height="80dp">
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
+    android:background="@color/color_home_info_background"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:visibility="gone">
 
     <ImageView
         android:id="@+id/head_img"
         android:layout_width="66dp"
         android:layout_height="66dp"
-        android:src="@drawable/qd_button_nomal"
         android:layout_marginLeft="20dp"
-        />
+        android:src="@drawable/qd_button_nomal" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/head_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="徐春晖"
+            android:textColor="@color/text_color_white"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/text_color_white"/>
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="患者:"
-                android:textSize="12sp"
-                android:textColor="@color/text_color_white"/>
+                android:textColor="@color/text_color_white"
+                android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/sufferer_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="15"
                 android:textColor="@color/text_color_white"
-                android:layout_marginLeft="10dp"
-                android:textSize="12sp"
-                />
+                android:textSize="12sp" />
+
             <ImageView
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/text_color_white"
                 android:layout_marginLeft="10dp"
-                />
+                android:background="@color/text_color_white" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="随访:"
-                android:textSize="12sp"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/text_color_white"/>
+                android:text="随访:"
+                android:textColor="@color/text_color_white"
+                android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/follow_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="15"
                 android:textColor="@color/text_color_white"
-                android:layout_marginLeft="10dp"
-                android:textSize="12sp"
-                />
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="26dp"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的收入"
             android:textColor="@color/text_color_white"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
         <TextView
+            android:id="@+id/income"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="440.0"
-            android:textStyle="bold"
             android:textColor="@color/text_color_white"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
