--- a/app/src/main/res/layout/activity_evpi_user.xml
+++ b/app/src/main/res/layout/activity_evpi_user.xml
@@ -19,7 +19,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp">
+            android:layout_marginTop="@dimen/img_margin_top">
 
             <ImageView
                 android:layout_width="150dp"
