--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
     <!-- UI统一设置 -->
     <dimen name="title_height">48.0dip</dimen>
     <dimen name="title_btn_width">50.0dip</dimen>
+    <dimen name="img_margin_top">30dip</dimen>
+    <dimen name="tv_margin_top">25dip</dimen>
 
     <dimen name="text_large">30sp</dimen>
     <dimen name="text_max">18sp</dimen>
