--- a/app/src/main/res/layout/activity_evpi_address.xml
+++ b/app/src/main/res/layout/activity_evpi_address.xml
@@ -8,24 +8,23 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:padding="30dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/evip_other"
                 android:textColor="@color/register_improve"
-                android:textSize="@dimen/text_size_23"
-                android:text="@string/evip_other" />
+                android:textSize="@dimen/text_size_23" />
 
             <Button
                 android:id="@+id/btn_hosital"
@@ -62,12 +61,9 @@
 
             <Button
                 android:id="@+id/next_btn"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                style="@style/btn_blue"
                 android:layout_marginTop="83dp"
-                android:background="@drawable/btn_bg_selecter"
-                android:text="@string/next"
-                android:textColor="@color/text_color_white" />
+                android:text="@string/next" />
         </LinearLayout>
     </ScrollView>
 
