--- a/app/src/main/res/layout/activity_evpi_user.xml
+++ b/app/src/main/res/layout/activity_evpi_user.xml
@@ -91,13 +91,9 @@
 
         <Button
             android:id="@+id/next_btn"
-            android:layout_width="match_parent"
-            android:layout_height="40dip"
+            style="@style/btn_blue"
             android:layout_marginTop="35dp"
-            android:background="@drawable/btn_bg_selecter"
-            android:text="@string/next"
-            android:textColor="@color/text_color_white"
-            android:textSize="@dimen/text_size_18" />
+            android:text="@string/next" />
     </LinearLayout>
 
 
