--- a/app/src/main/res/layout/activity_photo_evpi.xml
+++ b/app/src/main/res/layout/activity_photo_evpi.xml
@@ -38,13 +38,9 @@
         </ScrollView>
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            style="@style/btn_blue"
             android:layout_alignParentBottom="true"
             android:layout_margin="30dp"
-            android:textColor="@color/text_color_white"
-            android:textSize="@dimen/text_size_16"
-            android:background="@drawable/btn_bg_selecter"
             android:text="@string/register" />
 
     </RelativeLayout>
