--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,7 @@
             android:textSize="@dimen/text_size_22" />
 
         <EditText
+            android:id="@+id/mobile_edit"
             style="@style/edit_blue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -60,14 +61,13 @@
 
             <Button
                 android:id="@+id/btn_code"
+                style="@style/btn_blue"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="7dp"
                 android:layout_weight="4"
-                android:background="@drawable/btn_bg_selecter"
                 android:text="@string/phone_code"
-                android:textColor="@color/text_color_white"
-                android:textSize="@dimen/text_size_18" />
+                />
         </LinearLayout>
 
         <EditText
@@ -96,14 +96,11 @@
         </RelativeLayout>
 
         <Button
+            style="@style/btn_blue"
             android:id="@+id/next_btn"
-            android:layout_width="match_parent"
-            android:layout_height="40dip"
             android:layout_marginTop="@dimen/space_25"
-            android:background="@drawable/btn_bg_selecter"
             android:text="@string/next"
-            android:textColor="@color/text_color_white"
-            android:textSize="@dimen/text_size_18" />
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
