--- a/app/src/main/res/layout/activity_photo_evpi.xml
+++ b/app/src/main/res/layout/activity_photo_evpi.xml
@@ -27,12 +27,15 @@
                     android:textColor="@color/text_color_black"
                     android:textSize="@dimen/text_size_18" />
 
-                <ImageView
-                    android:id="@+id/imageview"
-                    android:layout_width="77dp"
-                    android:layout_height="77dp"
+                <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView
+                    android:id="@+id/gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:numColumns="3"
                     android:layout_marginTop="@dimen/text_size_20"
-                    android:background="@mipmap/photo_rect_add" />
+                    android:verticalSpacing="@dimen/space_15"
+                    android:listSelector="@android:color/transparent"
+                    ></com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView>
 
             </LinearLayout>
         </ScrollView>
