--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,7 +49,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/edit_code"
+                android:id="@+id/captcha_edit"
                 style="@style/edit_blue"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -71,12 +71,14 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/password_edit"
             style="@style/edit_blue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="@dimen/space_20"
             android:hint="@string/register_password"
-            android:inputType="number"
+            android:password="true"
+            android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
             android:paddingLeft="@dimen/space_15" />
 
         <RelativeLayout
