--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,6 +66,12 @@
 		<item name="android:textColor">@color/text_color_white</item>
 	</style>
 
+	<style name="horizontal_divider">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">0.5dp</item>
+		<item name="android:background">@color/item_selected_gray</item>
+	</style>
+
 	<style name="title_base_button">
 		<item name="android:layout_width">48dp</item>
 		<item name="android:layout_height">match_parent</item>
