--- a/app/src/main/res/layout/activity_photo_evpi.xml
+++ b/app/src/main/res/layout/activity_photo_evpi.xml
@@ -46,80 +46,7 @@
             android:layout_margin="30dp"
             android:text="@string/register" />
 
-
-        <RelativeLayout
-            android:id="@+id/edit_photo_fullscreen_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#55000000"
-            android:clickable="true"
-            android:onClick="hideEditPhotoLayout"
-            android:visibility="gone"
-            android:focusable="true">
-
-            <RelativeLayout
-                android:id="@+id/edit_photo_outer_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:id="@+id/edit_photo_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/take_picture_layout_round_corner_bg"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/take_picture"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:text="@string/take_picture"
-                        android:textColor="@color/blue_text"
-                        android:textSize="20sp" />
-
-                    <View style="@style/horizontal_divider" >
-                    </View>
-
-                    <TextView
-                        android:id="@+id/select_local_picture"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:text="@string/select_local_picture"
-                        android:textColor="@color/blue_text"
-                        android:textSize="20sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/edit_photo_layout"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/cancel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/video_order_layout_round_corner_bg"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:text="@string/cancel"
-                        android:textColor="@color/blue_text"
-                        android:clickable="true"
-                        android:onClick="hideEditPhotoLayout"
-                        android:textSize="20sp" />
-                </LinearLayout>
-            </RelativeLayout>
-        </RelativeLayout>
+       <include layout="@layout/photo_fullscreen_layout"></include>
 
     </RelativeLayout>
 
