--- a/app/src/main/res/layout/activity_evpi_user.xml
+++ b/app/src/main/res/layout/activity_evpi_user.xml
@@ -78,6 +78,7 @@
                     android:paddingLeft="@dimen/space_30"
                     android:paddingRight="@dimen/space_30"
                     android:paddingTop="@dimen/space_15"
+                    android:checked="true"
                     android:text="@string/evip_man"
                     android:textColor="@drawable/tags_text_color_seletor"
                     android:textSize="15sp" />
