修改随访患者信息页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -93,4 +93,5 @@
     <color name="color_7e7e7e">#7e7e7e</color>
     <color name="color_2080ba">#2080ba</color>
     <color name="color_b2b2b2">#b2b2b2</color>
+    <color name="color_3595cf">#3595cf</color>
 </resources>
