--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,4 +94,8 @@
     <color name="color_2080ba">#2080ba</color>
     <color name="color_b2b2b2">#b2b2b2</color>
     <color name="color_3595cf">#3595cf</color>
+    <color name="color_1f80b7">#1f80b7</color>
+    <color name="color_696969">#696969</color>
+    <color name="color_fff26c4f">#fff26c4f</color>
+    <color name="color_80f26c4f">#80f26c4f</color>
 </resources>
