--- a/app/src/main/res/drawable/shape_add_patient_group_et.xml
+++ b/app/src/main/res/drawable/shape_add_patient_group_et.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_b2b2b2" />
+        android:color="@color/color_dfdfdf" />
 </shape>
