--- a/app/src/main/res/layout/activity_photo_evpi.xml
+++ b/app/src/main/res/layout/activity_photo_evpi.xml
@@ -1,53 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include layout="@layout/top_title"></include>
-
-    <RelativeLayout
+    >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ScrollView
+        <include layout="@layout/top_title"></include>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="30dp">
+            android:layout_height="match_parent">
 
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:padding="30dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/evip_remark"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="@dimen/text_size_18" />
-
-                <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView
-                    android:id="@+id/gridview"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:numColumns="3"
-                    android:layout_marginTop="@dimen/text_size_20"
-                    android:verticalSpacing="@dimen/space_15"
-                    android:listSelector="@android:color/transparent"
-                    ></com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView>
+                    android:orientation="vertical">
 
-            </LinearLayout>
-        </ScrollView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/evip_remark"
+                        android:textColor="@color/text_color_black"
+                        android:textSize="@dimen/text_size_18" />
 
-        <Button
-            style="@style/btn_blue"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="30dp"
-            android:text="@string/register" />
+                    <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView
+                        android:id="@+id/gridview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:numColumns="3"
+                        android:layout_marginTop="@dimen/text_size_20"
+                        android:verticalSpacing="@dimen/space_15"
+                        android:listSelector="@android:color/transparent"
+                        ></com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView>
 
-       <include layout="@layout/photo_fullscreen_layout"></include>
+                </LinearLayout>
+            </ScrollView>
 
-    </RelativeLayout>
+            <Button
+                style="@style/btn_blue"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="30dp"
+                android:text="@string/register" />
 
-</LinearLayout>
+            <include layout="@layout/photo_fullscreen_layout"></include>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+    <include layout="@layout/display_big_image_layout"></include>
+</RelativeLayout>
+
