--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="otherspace_normal_gray">#ff707788</color>
     <color name="wheel_timebtn_nor">#ff000000</color>
     <color name="wheel_timebtn_pre">#CCCCCC</color>
+    <color name="ee_black">#ee000000</color>
+    <color name="cc_white">#ccffffff</color>
 
     <!-- 设计规范颜色值 begin -->
 
